bio text wrap and img url fix

--- a/rumbaugh-art-app/src/app/about/about.component.css
+++ b/rumbaugh-art-app/src/app/about/about.component.css
@@ -1,25 +1,23 @@
 #about-container {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding: 16px;
 }
 
 #bio-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 24px;
 }
 
-#bio-text {
-    font-size: 20px;
-    margin-bottom: 16px;
+.bio-text {
+    font-size: 26px;
+    line-height: normal;
+    margin-top: 8px;
+}
+
+#bio-photo-container {
+    text-align: center;
 }
 
 #bio-photo {
-    object-fit: cover;
-    width: 100%;
+    object-fit: contain;
+    max-height: 640px;
     height: 100%;
 }
 
@@ -27,26 +25,24 @@
 
 @media only screen and (min-width: 1024px) {
     #about-container {
-        width: auto;
     }
 
     #bio-container {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        padding: 24px;
     }
 
-    #bio-text {
+    .bio-text {
         font-size: 26px;
-        margin: 16px;
+        margin-right: 16px;
+        line-height: normal;
     }
 
     #bio-photo {
-        object-fit: cover;
-        max-width: 600px;
+        float: right;
+        object-fit: contain;
+        max-height: 640px;
+        max-width: 480px;
         width: 100%;
         height: 100%;
-        max-height: 95vh;
+        margin-left: 8px;
     }
 }
