--- a/rumbaugh-art-app/src/styles.css
+++ b/rumbaugh-art-app/src/styles.css
@@ -101,3 +101,7 @@ body {
           transform: translate3d(0, -20px, 0) rotate(90deg); }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.photo-shadow {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
